Add in button event handler

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="build/start.js" defer></script>
 </head>
 <body>
-    <h1 id="title" class="center-text">Wa-Tor World</h1>
+    <h1 id="title" class="center-text">Typescript Debug Test</h1>
     <div id="controls">
         <div id="buttons">
             <button id="startButton">Start</button>
